<resources>
    <string name="banner_title">Header</string>
    <string name="banner_text">Text of advertising</string>

    <string name="history">History</string>
    <string name="store_location">Folder for download</string>
    <string name="rate_app">Appreciate on Google Play</string>
    <string name="settings_of_wifi_direct">Settings Wi-Fi Direct</string>
    <string name="about_app">About the program</string>
    <string name="clean_cache">Clear cache</string>
    <string name="mail_to_developers">Write to the developer</string>

    <string name="alert">Attention!</string>
    <string name="all">Tất cả</string>
    <string name="ClientActivity_button_cancel">Hủy</string>
    <string name="ClientActivity_button_send">Gửi</string>
    <string name="OpenSetting">Mở cài đặt</string>
    <string name="Wifinotenable">Wifi đang tắt</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_host_title">Chờ kết nối</string>
    <string name="activity_media">Lấy hình ảnh</string>
    <string name="activity_sender_find_device">Không có thiết bị</string>
    <string name="activity_sender_title">Không có thiết bị</string>
    <string name="ad_message">Tất cả kết nối tới và đi sẽ bị hủy bỏ.</string>
    <string name="ad_no">Hủy</string>
    <string name="ad_title">Cảnh báo</string>
    <string name="ad_yes">OK</string>
    <string name="alert_dialog_title">Đổi tên thiết bị</string>
    <!--    <string name="all">Tất cả</string>-->
    <string name="app_name">TransferData</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps">Ứng dụng</string>
    <string name="audios">Âm thanh</string>
    <string name="available_devices">Thiết bị khả dụng</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="call_logs">Nhật ký cuộc gọi</string>
    <string name="close_drawer">Đóng</string>
    <string name="confirm_disconnect">Bạn có muốn ngắt kết nối ?</string>
    <string name="connecting">Đang kết nối</string>
    <string name="contacts">Danh bạ</string>
    <string name="data_type">Loại dữ liệu</string>
    <string name="device_name">Tên thiết bị</string>
    <string name="device_name_label">Thiết bị của bạn:</string>
    <string name="disconnect">Ngắt kết nối</string>
    <string name="done">Xong</string>
    <string name="enable_wifi_direct_before_using">Bạn cần mở Wifi-Direct trong Cài đặt.</string>
    <string name="estimine_times">Đang tính toán thời gian</string>
    <string name="files">Tệp</string>
    <string name="folder">Thư mục</string>
    <string name="get_audio">Lấy Audios</string>
    <string name="get_video">Lấy Videos</string>
    <string name="hour">Giờ</string>
    <string name="images">Hình ảnh</string>
    <string name="main_title">Chuyển dữ liệu sang thiết bị mới</string>
    <string name="messages">Tin nhắn</string>
    <string name="minute">Phút</string>
    <string name="more_info">Nhiều hơn</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="needturnonwifi">Bạn cần mở wifi để tìm kiếm thiết bị xung quanh</string>
    <string name="one_day_ago">Một ngày trước</string>
    <string name="one_month_ago">Một tháng trước</string>
    <string name="one_week_ago">Một tuần trước</string>
    <string name="one_year_ago">Một năm trước</string>
    <string name="open_drawer">Mở</string>
    <string name="phone_connect_title">Đã kết nối với</string>
    <string name="pleasewait">Vui lòng chờ</string>
    <string name="prepair_connection">Thiết lập kết nối</string>
    <string name="receive">Nhận</string>
    <string name="receive_data_subtitle">Vui lòng không sử dụng điện thoại của bạn, dữ liệu của bạn sẽ được sao lưu trên điện thoại mới sau khi quá trình gửi hoàn tất</string>
    <string name="receive_data_title">Đang sao chép dữ liệu...</string>
    <string name="receiving">Đang nhận</string>
    <string name="restoring_calllog">Đang khôi phục nhật ký cuộc gọi</string>
    <string name="restoring_contact">Đang khôi phục danh bạ</string>
    <string name="restoring_data">Đang khôi phục dữ liệu</string>
    <string name="restoring_message">Đang khôi phục tin nhắn</string>
    <string name="search_menu_title">Search</string>
    <string name="second">Giây</string>
    <string name="select_data">Chọn dữ liệu để gửi</string>
    <string name="selected_item">Mục</string>
    <string name="send">Gửi</string>
    <string name="sending">Đang gửi</string>
    <string name="settings">Cài đặt</string>
    <string name="subtitle">Thiết bị này sẽ làm gì?</string>
    <string name="syncing">Đồng bộ</string>
    <string name="title_activity_peers_holder">PeersHolder</string>
    <string name="total_size_text">9 GB</string>
    <string name="transfer">Truyền dữ liệu</string>
    <string name="tutorial">Kết nối với thiết bị của bạn trên máy mới</string>
    <string name="videos">Video</string>

</resources>
